--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,5 +27,8 @@
   "fullscreen": "Fullscreen",
   "exit_fullscreen": "Exit fullscreen",
   "errors": "Errors",
-  "network": "Network"
+  "network": "Network",
+  "redirect": "Found. Redirect...",
+  "not_found": "On request \"{query}\" returned no results.",
+  "please": "Please specify the request and try again."
 }
