--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -27,5 +27,8 @@
   "fullscreen": "На весь экран",
   "exit_fullscreen": "Выход",
   "errors": "Ошибки",
-  "network": "Сеть"
+  "network": "Сеть",
+  "redirect": "Найдено. Переадресация...",
+  "not_found": "По запросу \"{query}\" ничего не найдено.",
+  "please": "Пожалуйста, уточните запрос и повторите попытку"
 }
