--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -30,5 +30,5 @@
   "network": "网络",
   "redirect": "找到了. 重新導向...",
   "not_found": "應要求“{query}”未返回任何結果。",
-  "please": "請指定請求，然後重試。"
+  "please": "请澄清请求，然后重试。"
 }
