transaction_by_time

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,11 +10,11 @@
     "date": "Date",
     "receive_count": "Receive Count",
     "send_count": "Send Count",
-    "volume_in_eth": "Volume In, {currency}",
-    "volume_out_eth": "Volume Out, {currency}",
+    "volume_in": "Volume In, {currency}",
+    "volume_out": "Volume Out, {currency}",
     "day": "Day",
     "month": "Month",
-    "volume_eth": "Volume, {currency}",
+    "volume": "Volume, {currency}",
     "transactions_count": "Transactions Count",
     "calls_count": "Calls Count",
     "trades": "Trades Count",
