--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -10,11 +10,11 @@
     "date": "Дата",
     "receive_count": "Вызовы контрактов",
     "send_count": "Количество получателей",
-    "volume_in_eth": "Объем входящих, {currency}",
-    "volume_out_eth": "Объем исходящих, {currency}",
+    "volume_in": "Объем входящих, {currency}",
+    "volume_out": "Объем исходящих, {currency}",
     "day": "День",
     "month": "Месяц",
-    "volume_eth": "Объем, {currency}",
+    "volume": "Объем, {currency}",
     "transactions_count": "Количество транзакций",
     "calls_count": "Количество вызовов",
     "trades": "Количество сделок",
