--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -21,8 +21,8 @@
     "trades_as_buyer": "Сделок от покупателей",
     "trades_as_seller": "Сделок от продавцов",
     "pair": "Пара",
-    "buy": "Куплено",
-    "sell": "Продано",
+    "buy": "Покупка",
+    "sell": "Продажа",
     "trade": "Сделки"
   },
   "show_line": "Показаны первые {count} строк | Показана {count} строка | Показаны первые {count} строки | Показаны первые {count} строк",
