rename transactions -> transfers

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
     "smart_contract": "Smart Contract",
     "method": "Method",
     "tx_count": "Tx Count",
+    "transfers_count": "Transfers Count",
     "date": "Date",
     "receive_count": "Receive Count",
     "send_count": "Send Count",
@@ -15,7 +16,6 @@
     "day": "Day",
     "month": "Month",
     "volume": "Volume, {currency}",
-    "transactions_count": "Transactions Count",
     "calls_count": "Calls Count",
     "trades": "Trades Count",
     "trades_as_buyer": "Trades as buyer",
