--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,6 +7,7 @@
     "smart_contract": "Смарт контракт",
     "method": "Метод",
     "tx_count": "Количество транзакций",
+    "transfers_count": "Количество переводов",
     "date": "Дата",
     "receive_count": "Вызовы контрактов",
     "send_count": "Количество получателей",
@@ -15,7 +16,6 @@
     "day": "День",
     "month": "Месяц",
     "volume": "Объем, {currency}",
-    "transactions_count": "Количество транзакций",
     "calls_count": "Количество вызовов",
     "trades": "Количество сделок",
     "trades_as_buyer": "Сделок от покупателей",
