--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -7,6 +7,7 @@
     "smart_contract": "智能合約",
     "method": "方法",
     "tx_count": "交易計數",
+    "transfers_count": "轉移計數",
     "date": "日期",
     "receive_count": "呼叫合同",
     "send_count": "接收計數",
@@ -15,7 +16,6 @@
     "day": "天",
     "month": "Month",
     "volume": "卷, {currency}",
-    "transactions_count": "事務計數",
     "calls_count": "通話次數",
     "trades": "交易計數",
     "trades_as_buyer": "作為買方的交易",
