revert in GraphiQL

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,7 +30,8 @@
   "loading": "Loading...",
   "show_more": "Show more...",
   "show_query": "Show query",
-  "apply_changes": "Apply Changes",
+  "apply_changes": "Apply сhanges",
+  "revert_changes": "Revert changes",
   "close": "Close",
   "fullscreen": "Fullscreen",
   "exit_fullscreen": "Exit fullscreen",
