--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -30,6 +30,7 @@
   "loading": "裝載...",
   "show_more": "展示更多...",
   "show_query": "顯示查詢",
+  "revert_changes": "還原更改",
   "apply_changes": "應用更改",
   "close": "關",
   "fullscreen": "全屏",
